compiler/testData/cli/jvm/syntheticAccessorForPropertiesSignatureClash.out
compiler/testData/cli/jvm/syntheticAccessorForPropertiesSignatureClash.kt:1:7: error: platform declaration clash: The following declarations have the same JVM signature (access$getFoo$cp()I):
    fun <get-foo>(): kotlin.Int
    fun `access$getFoo$cp`(): kotlin.Int
class A {
      ^
compiler/testData/cli/jvm/syntheticAccessorForPropertiesSignatureClash.kt:1:7: error: platform declaration clash: The following declarations have the same JVM signature (access$getFoo$p(LA;)I):
    fun <get-foo>(): kotlin.Int
    fun `access$getFoo$p`(a: A): kotlin.Int
class A {
      ^
compiler/testData/cli/jvm/syntheticAccessorForPropertiesSignatureClash.kt:1:7: error: platform declaration clash: The following declarations have the same JVM signature (access$setFoo$p(LA;I)V):
    fun <set-foo>(<set-?>: kotlin.Int): kotlin.Unit
    fun `access$setFoo$p`(a: A, d: kotlin.Int): kotlin.Unit
class A {
      ^
compiler/testData/cli/jvm/syntheticAccessorForPropertiesSignatureClash.kt:1:7: error: platform declaration clash: The following declarations have the same JVM signature (access$setFoo$cp(I)V):
    fun <set-foo>(<set-?>: kotlin.Int): kotlin.Unit
    fun `access$setFoo$cp`(d: kotlin.Int): kotlin.Unit
class A {
      ^
compiler/testData/cli/jvm/syntheticAccessorForPropertiesSignatureClash.kt:5:5: error: platform declaration clash: The following declarations have the same JVM signature (access$getFoo$p(LA;)I):
    fun <get-foo>(): kotlin.Int
    fun `access$getFoo$p`(a: A): kotlin.Int
    fun `access$getFoo$p`(a: A): Int = 1
    ^
compiler/testData/cli/jvm/syntheticAccessorForPropertiesSignatureClash.kt:6:5: error: platform declaration clash: The following declarations have the same JVM signature (access$setFoo$p(LA;I)V):
    fun <set-foo>(<set-?>: kotlin.Int): kotlin.Unit
    fun `access$setFoo$p`(a: A, d: kotlin.Int): kotlin.Unit
    fun `access$setFoo$p`(a: A, d: Int) {}
    ^
compiler/testData/cli/jvm/syntheticAccessorForPropertiesSignatureClash.kt:9:5: error: platform declaration clash: The following declarations have the same JVM signature (access$getFoo$cp()I):
    fun <get-foo>(): kotlin.Int
    fun `access$getFoo$cp`(): kotlin.Int
    fun `access$getFoo$cp`(): Int = 1
    ^
compiler/testData/cli/jvm/syntheticAccessorForPropertiesSignatureClash.kt:10:5: error: platform declaration clash: The following declarations have the same JVM signature (access$setFoo$cp(I)V):
    fun <set-foo>(<set-?>: kotlin.Int): kotlin.Unit
    fun `access$setFoo$cp`(d: kotlin.Int): kotlin.Unit
    fun `access$setFoo$cp`(d: Int) {}
    ^
compiler/testData/cli/jvm/syntheticAccessorForPropertiesSignatureClash.kt:12:15: error: platform declaration clash: The following declarations have the same JVM signature (access$getFoo$p(LA$Companion;)I):
    fun <get-foo>(): kotlin.Int
    fun `access$getFoo$p`(p: A.Companion): kotlin.Int
    companion object {
              ^
compiler/testData/cli/jvm/syntheticAccessorForPropertiesSignatureClash.kt:12:15: error: platform declaration clash: The following declarations have the same JVM signature (access$setFoo$p(LA$Companion;I)V):
    fun <set-foo>(<set-?>: kotlin.Int): kotlin.Unit
    fun `access$setFoo$p`(p: A.Companion, d: kotlin.Int): kotlin.Unit
    companion object {
              ^
compiler/testData/cli/jvm/syntheticAccessorForPropertiesSignatureClash.kt:22:9: error: platform declaration clash: The following declarations have the same JVM signature (access$getFoo$p(LA$Companion;)I):
    fun <get-foo>(): kotlin.Int
    fun `access$getFoo$p`(p: A.Companion): kotlin.Int
        fun `access$getFoo$p`(p: A.Companion): Int = 1
        ^
compiler/testData/cli/jvm/syntheticAccessorForPropertiesSignatureClash.kt:23:9: error: platform declaration clash: The following declarations have the same JVM signature (access$setFoo$p(LA$Companion;I)V):
    fun <set-foo>(<set-?>: kotlin.Int): kotlin.Unit
    fun `access$setFoo$p`(p: A.Companion, d: kotlin.Int): kotlin.Unit
        fun `access$setFoo$p`(p: A.Companion, d: Int) {}
        ^
COMPILATION_ERROR